# src/main/java/com/redhat/exhort/integration/providers/ossindex/OssIndexResponseHandler.java
@@ -18,13 +18,13 @@
 
 package com.redhat.exhort.integration.providers.ossindex;
 
+import static com.redhat.exhort.integration.Constants.OSS_INDEX_PROVIDER;
+
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.function.Consumer;
-import java.util.function.Supplier;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -33,13 +33,9 @@ import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.node.ArrayNode;
 import com.redhat.exhort.api.PackageRef;
-import com.redhat.exhort.api.ProviderResponse;
 import com.redhat.exhort.api.SeverityUtils;
 import com.redhat.exhort.api.v4.Issue;
-import com.redhat.exhort.api.v4.Source;
-import com.redhat.exhort.api.v4.VulnerabilitiesSummary;
 import com.redhat.exhort.config.ObjectMapperProducer;
-import com.redhat.exhort.integration.Constants;
 import com.redhat.exhort.integration.providers.ProviderResponseHandler;
 import com.redhat.exhort.model.CvssParser;
 
@@ -50,61 +46,30 @@ public class OssIndexResponseHandler extends ProviderResponseHandler {
 
   private static final Logger LOGGER = LoggerFactory.getLogger(OssIndexRequestBuilder.class);
 
-  private static final Source OSS_INDEX_SOURCE =
-      new Source().origin(Constants.OSS_INDEX_PROVIDER).provider(Constants.OSS_INDEX_PROVIDER);
-
   private final ObjectMapper mapper = ObjectMapperProducer.newInstance();
 
-  public ProviderResponse aggregateSplit(ProviderResponse oldExchange, ProviderResponse newExchange)
+  public Map<String, List<Issue>> aggregateSplit(
+      Map<String, List<Issue>> oldExchange, Map<String, List<Issue>> newExchange)
       throws IOException {
-    if (!newExchange.summary().getStatus().getOk()) {
+    if (oldExchange == null) {
       return newExchange;
     }
-    if (oldExchange != null) {
-      if (!oldExchange.summary().getStatus().getOk()) {
-        return oldExchange;
-      }
-      oldExchange.reports().addAll(newExchange.reports());
-      oldExchange
-          .summary()
-          .getSources()
-          .entrySet()
-          .forEach(
-              e -> {
-                accumulateSummaries(
-                    e.getValue(), newExchange.summary().getSources().get(e.getKey()));
-              });
-      return oldExchange;
-    }
-    return newExchange;
-  }
-
-  private void accumulateSummaries(VulnerabilitiesSummary acc, VulnerabilitiesSummary inc) {
-    if (inc == null) {
-      return;
-    }
-    accumulate(acc::setDirect, acc::getDirect, inc::getDirect);
-    accumulate(acc::setTransitive, acc::getTransitive, inc::getTransitive);
-    accumulate(acc::setTotal, acc::getTotal, inc::getTotal);
-    accumulate(acc::setCritical, acc::getCritical, inc::getCritical);
-    accumulate(acc::setHigh, acc::getHigh, inc::getHigh);
-    accumulate(acc::setMedium, acc::getMedium, inc::getMedium);
-    accumulate(acc::setLow, acc::getLow, inc::getLow);
-    accumulate(acc::setRecommendations, acc::getRemediations, inc::getRecommendations);
-    accumulate(acc::setRemediations, acc::getRemediations, inc::getRemediations);
-  }
-
-  private void accumulate(
-      Consumer<Integer> setter, Supplier<Integer> accGetter, Supplier<Integer> incGetter) {
-    Integer acc = accGetter.get();
-    Integer inc = incGetter.get();
-    if (acc == null) {
-      setter.accept(inc);
-    } else if (inc == null) {
-      setter.accept(acc);
-    } else {
-      setter.accept(acc + inc);
-    }
+    oldExchange
+        .entrySet()
+        .forEach(
+            e -> {
+              List<Issue> issues = newExchange.get(e.getKey());
+              if (issues != null) {
+                e.getValue().addAll(issues);
+              }
+            });
+    newExchange.keySet().stream()
+        .filter(k -> !oldExchange.keySet().contains(k))
+        .forEach(
+            k -> {
+              oldExchange.put(k, newExchange.get(k));
+            });
+    return oldExchange;
   }
 
   public Map<String, List<Issue>> responseToIssues(byte[] response, String privateProviders)
@@ -143,11 +108,11 @@ public class OssIndexResponseHandler extends ProviderResponseHandler {
         .cvss(CvssParser.fromVectorString(data.get("cvssVector").asText()))
         .cvssScore(score)
         .severity(SeverityUtils.fromScore(score))
-        .source(OSS_INDEX_SOURCE);
+        .source(OSS_INDEX_PROVIDER);
   }
 
   @Override
   protected String getProviderName() {
-    return OSS_INDEX_SOURCE.getProvider();
+    return OSS_INDEX_PROVIDER;
   }
 }
